--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,4 +1,8 @@
+# FROM java:8
 FROM openjdk:8-jdk-alpine
+MAINTAINER chhh<810808038@qq.com>
 VOLUME /tmp
-ADD my-site-1.0.2.RELEASE.jar app.jar
+COPY *.jar /app.jar
+CMD ["--server.port=8080"]
+# EXPOSE 8080
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
